--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.8.2",
   "private": true,
   "dependencies": {
+    "hexo": "2.8.*",
     "hexo-renderer-ejs": "*",
     "hexo-renderer-stylus": "*",
     "hexo-renderer-marked": "*"
