--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,9 @@ exclude_generator:
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type: github
+  type: git
   repo: https://github.com/babraham123/mysite-blog.git
+  branch: master
 
 
 
